--- a/bower.json
+++ b/bower.json
@@ -10,5 +10,8 @@
     "angular-material": "~1.0.6",
     "angular-aria": "~1.5.0",
     "angular-messages": "~1.5.0"
+  },
+  "resolutions": {
+    "angular": "1.4.8"
   }
 }
