--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "gulp-angular-templatecache": "~1.5.0",
     "gulp-autoprefixer": "~2.1.0",
     "gulp-clean": "~0.3.1",
+    "gulp-clean-css": "^2.0.6",
     "gulp-clone": "~1.0.0",
+    "gulp-concat": "^2.6.0",
     "gulp-connect": "~2.2.0",
     "gulp-copy": "0.0.2",
     "gulp-css-url-adjuster": "~0.2.3",
     "gulp-inject": "~1.0.2",
+    "gulp-inline-source": "^2.1.0",
     "gulp-jshint": "~1.9.0",
     "gulp-jshint-xml-file-reporter": "^0.5.1",
     "gulp-livereload": "~3.2.0",
